--- a/src/components/SearchComponent.css
+++ b/src/components/SearchComponent.css
@@ -40,6 +40,16 @@
   background-color: #8B4513;
 }
 
+.search-button:disabled {
+  background-color: #ab987a;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+.search-button:disabled:hover {
+  background-color: #ab987a;
+}
+
 .search-clear-button {
   background-color: #f0f0f0;
   color: #5C4033;
